kubernetes/apps/erfbeeld/production/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: erfbeeld
  annotations:
spec:
  hostnames:
    - erfbeeld.webgrip.dev
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      filters:
        - type: RequestHeaderModifier
          requestHeaderModifier:
            set:
              - name: X-Forwarded-Port
                value: "443"
              - name: X-Forwarded-Proto
                value: https
      backendRefs:
        - name: erfbeeld
          port: 8080
